# gltflib

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
gltflib/: __init__.py
gltflib/models/: attributes.py  gltf_model.py
